--- a/eks/ingress.yaml
+++ b/eks/ingress.yaml
@@ -3,6 +3,10 @@ kind: Ingress
 metadata:
   name: jenkins-alb
   annotations:
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:589634832240:certificate/640910ed-71a0-40e6-b43f-5548ee26a438
+    alb.ingress.kubernetes.io/healthcheck-path: /
+    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
   namespace: default
